# steam-shadow-launcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  download.rs  error.rs  http.rs  junction.rs  launcher.rs  library.rs  main.rs  sandboxie.rs  settings.rs  shortcut.rs  steam_paths.rs  steam_process.rs  switcher.rs  updater.rs  vdf.rs  workspace.rs
src-tauri/src/sda/: add.rs  confirmations.rs  crypto.rs  login.rs  mafile.rs  mod.rs  poller.rs  totp.rs  vault.rs
src/api/: tauri.ts
src/components/: AccountCard.tsx  AddAccountModal.tsx  AddAuthenticatorModal.tsx  AdminRestartDialog.tsx  AuthPollerSection.tsx  AuthSecuritySection.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ErrorBox.tsx  GamePickerModal.tsx  HealthBadge.tsx  ImportAccountsModal.tsx  LogDrawer.tsx  LoginFlowModal.tsx  SandboxieInstallModal.tsx  Sidebar.tsx  Spinner.tsx  SwitchWarnDialog.tsx  TitleBar.tsx  ToastHost.tsx  UpdateModal.tsx  WorkspaceChangeDialog.tsx
src/state/: store.ts
src/views/: AuthenticatorView.tsx  FirstRunWizard.tsx  MainView.tsx  SettingsView.tsx
