[package]
name = "steam-shadow-launcher"
version = "0.2.1"
edition = "2021"
description = "Steam Shadow Launcher"
authors = ["Steam Shadow"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_Registry", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_LibraryLoader"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls", "gzip"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rsa = "0.9"
rand = "0.8"
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = "0.12"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
